--- a/index.html
+++ b/index.html
@@ -48,9 +48,6 @@
                     <img src="/assets/lupa.svg" alt="Buscar" class="w-5 h-5" />
                 </button>
             </div>
-            <!-- Resultado da busca -->
-            <p id="resultadoBusca" class="text-lg text-gray-700 font-medium mx-4 lg:mx-0"></p>
-
             <a href="#" class="hidden lg:flex lg:gap-1 items-center"><img src="/assets/usuario.svg" alt="usuario">
                 <p class="leading-none">Olá, <br>
                     Nome cliente!</p>
@@ -59,6 +56,9 @@
                 <img src="/assets/sacola.svg" alt="sacola compras"><img src="./assets/compras-sacola.svg"
                     alt="numero de compras" class="absolute -top-1.5 -right-1.5 w-4 h-4"></a>
         </div>
+        <!-- Resultado da busca -->
+        <p id="resultadoBusca" class="block text-base lg:text-lg text-[#303030] mx-4 lg:text-center">
+        </p>
     </header>
 
     <!-- MENU NAV -->
