--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </button>
                 <img src="./assets/logo-avanti.svg" alt="logo-avanti">
                 <a href="#" class="relative inline-block lg:hidden">
-                    <img src="/assets/sacola.svg" alt="sacola compras"><img src="./assets/compras-sacola.svg"
+                    <img src="./assets/sacola.png" alt="sacola compras"><img src="./assets/compras.png"
                         alt="numero de compras" class="absolute -top-1.5 -right-1.5 w-4 h-4"></a>
             </div>
 
@@ -53,7 +53,7 @@
                     Nome cliente!</p>
             </a>
             <a href="#" class="relative hidden lg:inline-block">
-                <img src="/assets/sacola.svg" alt="sacola compras"><img src="./assets/compras-sacola.svg"
+                <img src="./assets/sacola.png" alt="sacola compras"><img src="./assets/compras.png"
                     alt="numero de compras" class="absolute -top-1.5 -right-1.5 w-4 h-4"></a>
         </div>
         <!-- Resultado da busca -->
@@ -599,6 +599,57 @@
 
                         <button
                             class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
+                    </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative"
+                        data-nome="Camisa Preta">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio-camisa-preta.png" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
+
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
+                        <button
+                            class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar</button>
+                    </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative"
+                        data-nome="Camisa Branca">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
+
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
+                        <button class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar
+                        </button>
+                    </div>
+                    <div class="swiper-slide max-w-44 text-[#303030] border-2 border-[#E7E7EA] rounded-lg p-2 relative"
+                        data-nome="Camisa Branca">
+                        <span
+                            class="text-xs text-[#FFFFFF] bg-[#00264E] rounded-md p-1 absolute top-1 left-1">NOVO</span>
+                        <img src="./assets/anuncio.svg" alt="produto">
+                        <h3 class="my-2">Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h3>
+                        <div class="flex items-center gap-3 ">
+                            <p class="line-through"> R$ 100,00</p>
+                            <span class="text-xs bg-[#5EC0BE] text-[#FFFFFF] rounded-sm px-2 py-1">10%OFF</span>
+                        </div>
+
+                        <p class="text-base font-bold">R$ 79,90</p>
+                        <p>Ou em até <span class="font-bold">10x de R$ 7,90</span></p>
+
+                        <button class="bg-[#005CFF] text-[#FFFFFF] py-2 px-6 rounded-lg text-sm w-full my-2">Comprar
+                        </button>
                     </div>
 
                 </div>
