Adiciona prints do desktop ao readme e implementa links no rodapé

--- a/index.html
+++ b/index.html
@@ -825,10 +825,18 @@
                             <span class="arrow lg:hidden"><img src="./assets/arrow.png" alt=""></span>
                         </button>
                         <div class="accordion-content hidden p-4 space-y-2 text-xs lg:block lg:pt-0">
-                            <h4 class="text-xs">Sobre nós</h4>
-                            <h4 class="text-xs">Nossas Lojas</h4>
-                            <h4 class="text-xs">Privacidade e Segurança</h4>
-                            <h4 class="text-xs">Termos e Condições</h4>
+                            <a href="#" class="block">
+                                <h4 class="text-xs">Sobre nós</h4>
+                            </a>
+                            <a href="#" class="block">
+                                <h4 class="text-xs">Nossas Lojas</h4>
+                            </a>
+                            <a href="#" class="block">
+                                <h4 class="text-xs">Privacidade e Segurança</h4>
+                            </a>
+                            <a href="#" class="block">
+                                <h4 class="text-xs">Termos e Condições</h4>
+                            </a>
                         </div>
                     </div>
 
@@ -840,12 +848,22 @@
 
                             <span class="arrow lg:hidden"><img src="./assets/arrow.png" alt=""></span>
                         </button>
-                        <div class="accordion-content hidden p-4 space-y-2 text-xs lg:block lg:pt-0">
-                            <h4>Fale Conosco</h4>
-                            <h4>Frete e Entrega</h4>
-                            <h4>Trocas e Devoluções</h4>
-                            <h4>Formas de Pagamento</h4>
-                            <h4>FAQ</h4>
+                        <div class="accordion-content hidden p-4 space-y-2 text-xs lg:block lg:pt-0 ">
+                            <a href="#" class="block">
+                                <h4>Fale Conosco</h4>
+                            </a>
+                            <a href="#" class="block">
+                                <h4>Frete e Entrega</h4>
+                            </a>
+                            <a href="#" class="block">
+                                <h4>Trocas e Devoluções</h4>
+                            </a>
+                            <a href="#" class="block">
+                                <h4>Formas de Pagamento</h4>
+                            </a>
+                            <a href="#" class="block">
+                                <h4>FAQ</h4>
+                            </a>
                         </div>
                     </div>
 
