--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <img src="/assets/lupa.svg" alt="Buscar" class="w-5 h-5" />
                 </button>
             </div>
-            <a href="#" class="hidden lg:flex lg:gap-1 items-center"><img src="/assets/usuario.png" alt="usuario" />
+            <a href="#" class="hidden lg:flex lg:gap-1 items-center"><img src="./assets/usuario.png" alt="usuario" />
                 <p class="leading-none">
                     Olá, <br />
                     Nome cliente!
