Ajusta links de navegação para incluir efeitos de hover e melhora a interação do menu

--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
             <img src="./assets/menu.svg" alt="menu hamburguer" />
             Todas as Categorias
         </button>
-        <a href="#" class="text-sm hover:text-[#005CFF]" id="menuFeminino">Feminino</a>
-        <a href="#" class="text-sm">Masculino</a>
-        <a href="#" class="text-sm">Infantil</a>
-        <a href="#" class="text-sm">Acessórios</a>
-        <a href="#" class="text-sm">Beleza</a>
-        <a href="#" class="text-sm">Eletrônicos</a>
-        <a href="#" class="text-sm">Casa</a>
-        <a href="#" class="text-sm hidden xl:inline">Construção</a>
-        <a href="#" class="text-sm hidden xl:inline">Esporte</a>
-        <a href="#" class="text-sm hidden xl:inline">Lazer</a>
-        <a href="#" class="text-sm hidden 2xl:inline">Saúde</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold" id="menuFeminino">Feminino</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Masculino</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Infantil</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Acessórios</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Beleza</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Eletrônicos</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Casa</a>
+        <a href="#" class="text-sm hidden xl:inline hover:text-[#005CFF] hover:font-bold">Construção</a>
+        <a href="#" class="text-sm hidden xl:inline hover:text-[#005CFF] hover:font-bold">Esporte</a>
+        <a href="#" class="text-sm hidden xl:inline hover:text-[#005CFF] hover:font-bold">Lazer</a>
+        <a href="#" class="text-sm hidden 2xl:inline hover:text-[#005CFF] hover:font-bold">Saúde</a>
     </nav>
 
 
@@ -88,7 +88,7 @@
             <ul class="w-48 border-r pr-4 relative">
                 <li class="group">
                     <a href="#"
-                        class="flex px-4 py-2 font-semibold hover:text-[#005CFF] hover:font-bold justify-between items-center">Feminino
+                        class="flex px-4 py-2 font-normal hover:text-[#005CFF] hover:font-bold justify-between items-center">Feminino
                         <img src="./assets/arrow.png" alt="seta" class="-rotate-90" />
                     </a>
                     <div class="absolute -top-2 left-full ml-8 hidden group-hover:flex p-6 gap-32 z-10">
