Ajusta a estrutura do menu de categorias para usar com o hover sobre os departamentos

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="./assets/menu.svg" alt="menu hamburguer" />
             Todas as Categorias
         </button>
-        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold" id="menuFeminino">Feminino</a>
+        <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Feminino</a>
         <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Masculino</a>
         <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Infantil</a>
         <a href="#" class="text-sm hover:text-[#005CFF] hover:font-bold">Acessórios</a>
@@ -91,7 +91,7 @@
                         class="flex px-4 py-2 font-normal hover:text-[#005CFF] hover:font-bold justify-between items-center">Feminino
                         <img src="./assets/arrow.png" alt="seta" class="-rotate-90" />
                     </a>
-                    <div class=" absolute -top-2 left-full ml-8 hidden group-hover:flex p-6 gap-32 z-10">
+                    <div class="absolute -top-2 left-full ml-8 group-hover:flex hidden p-6 gap-32 z-10">
                         <div class="text-sm">
                             <h4 class="text-blue-600 font-bold mb-2">Roupas</h4>
                             <ul class="text-gray-700 text-sm space-y-3">
