Corrige o caminho da imagem do ícone de lupa para garantir a exibição correta

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     class="border-2 border-[#DDDDDD] rounded-md placeholder-black font-semibold py-2 pl-5 pr-10 w-full" />
 
                 <button onclick="buscar()" class="absolute right-3 top-1/2 transform -translate-y-1/2">
-                    <img src="/assets/lupa.png" alt="Buscar" class="w-5 h-5" />
+                    <img src="./assets/lupa.png" alt="Buscar" class="w-5 h-5" />
                 </button>
             </div>
             <a href="#" class="hidden lg:flex lg:gap-1 items-center"><img src="./assets/usuario.png" alt="usuario" />
