--- a/index.html
+++ b/index.html
@@ -903,7 +903,7 @@
     </form>
   </section>
   <footer>
-    <section class="bg-[#F5F5F5] py-10">
+    <section class="bg-[#F5F5F5]">
       <div class="flex flex-col lg:flex-row lg:items-center lg:justify-center lg:px-20">
         <div class="flex flex-col items-center">
           <img src="./assets/logo-avanti.svg" alt="logo avanti" />
